Replace the Lucene-based filter with a fuzzy dictionary filter (#185)
* #176 A fuzzy dictionary filter to replace the lucene dictionary filter to remove dependencies.